--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    pagina errada
+    Loading
+    <script>
+        setTimeout(()=>{
+            window.location.href = './pages/getPerson.html'
+        },1000)
+    </script>
 </body>
 </html>
