--- a/pages/getPerson.html
+++ b/pages/getPerson.html
@@ -116,7 +116,7 @@
 
         function deletePerson(idd){
             event.preventDefault()
-            const url = `${window.location.origin}/person`
+            const url = `${window.location.origin}/person/`
             console.log(doDelete(`${url}${idd}`))
         }
 
