--- a/pages/cadastrar.html
+++ b/pages/cadastrar.html
@@ -25,7 +25,7 @@
     
 </head>
 <body>
-    <a href="getPerson.html"><button> voltar </button></a>
+    <a href="getPerson"><button> voltar </button></a>
     <div class="container">
         <p>criar person</p>
         <form onsubmit="cadastrarUsuario()">
