--- a/pages/personOne.html
+++ b/pages/personOne.html
@@ -26,7 +26,7 @@
     </style>
 </head>
 <body>
-    <a href="getPerson.html"><button >voltar</button></a>
+    <a href="getPerson"><button >voltar</button></a>
     
     <div class="container">
         <h1>Nome: </h1>
